# ssh_agent_client_rs_git_bash

./: Cargo.toml  README.md  RELEASES.md  cache66.txt
.github/workflows/: rust_fmt_auto_build_test.yml  win_rust_fmt_auto_build_test.yml  win_test.yml
automation_tasks_rs/src/: main.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  github_api_token_with_oauth2_mod.rs  mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/search.desc/ssh_agent_client_rs_git_bash/: ssh_agent_client_rs_git_bash-desc-0-.js
docs/src/ssh_agent_client_rs_git_bash/: error.rs.html  lib.rs.html
docs/ssh_agent_client_rs_git_bash/: all.html  fn.do_secret_handshake_with_remote_end.html  fn.get_uid.html  fn.order_bytes_pid_uid_gid.html  fn.parse_fake_socket_metadata.html  fn.parse_guid_and_change_byte_order.html  fn.parse_uid.html  fn.prepare_pid_uid_gid.html  fn.read_and_parse_fake_socket_file.html  index.html  sidebar-items.js  struct.Client.html  trait.GitBash.html
docs/ssh_agent_client_rs_git_bash/error/: enum.Error.html  index.html  type.Result.html
docs/trait.impl/core/convert/: trait.From.js
docs/trait.impl/core/error/: trait.Error.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/trait.impl/ssh_agent_client_rs_git_bash/: trait.GitBash.js
docs/type.impl/core/result/: enum.Result.js
src/: error.rs  lib.rs
tests/: test_win_git_bash.rs  win_git_bash.rs
tmp/: temp65.txt  temp66.txt
