[package]
name = "ssh_agent_client_rs_git_bash"
# SemVer rules for libraries:
# increment MAJOR version when you make breaking changes (incompatible API changes)
# increment MINOR version when you add functionality (that are backward compatible)
# increment PATCH version when you make bug fixes (that are backward compatible)
# PATCH version MUST be reset to 0 when MINOR version is incremented.
# PATCH and MINOR versions MUST be reset to 0 when MAJOR version is incremented.
version = "0.0.10"
authors = ["Bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Add git-bash ssh-agent implementation for ssh-agent-client-rs"
repository = "https://github.com/bestia-dev/ssh_agent_client_rs_git_bash"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained","ready-for-use", "rustlang"]
# allowed categories are listed here <https://crates.io/category_slugs>
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
ssh-agent-client-rs="1.0.0"
thiserror = "2.0.12"
anyhow="1.0.97"
ssh-key="0.6.7"
